====
NEWS
====

:Authors: Toshio Kuratomi
:Date: 5 Jan 2011
:Version: 0.2.x


-----
0.2.3
-----

* Expose MAXFD, list2cmdline(), and mswindows in kitchen.pycompat27.subprocess.
  These are undocumented, and not in upstream's __all__ but google (and bug
  reports against kitchen) show that some people are using them.  Note that
  upstream is leaning towards these being private so they may be deprecated in
  the python3 subprocess.

-----
0.2.2
-----

* Add kitchen.text.converters.exception_to_bytes() and
  kitchen.text.converters.exception_to_unicode() that take an exception object
  and convert it into a text representation.
* Add a documentation section on how API can be simplified if you can limit your encodings

If all goes well, we'll be making a 1.0 release shortly which is basically this release.

-------
0.2.2a1
-------

* Fix exception messages that contain unicode characters
* Speed up to_unicode for the common cases of utf-8 and latin-1.
* kitchen.i18n.NewGNUTranslations object that always returns unicode for
  ugettext and ungettext, always returns str for the other gettext functions,
  and doesn't throw UnicodeError.
* Change i18n functions to return either DummyTranslations or
  NewGNUTranslations so all strings returned are known to be unicode or str.
* kitchen.pycompat24.base64 now synced from upstream python so it implements
  all of the python-2.4 API
* unittest NewGNUTranslations
* unittest that easy_gettext_setup returns the correct objects
* Document kitchen.text.display
* Proofread all of the documentation.  Cross reference to the stdlib.
* Write a porting guide for people porting from python-fedora and yum APIs.

-------
0.2.1a1
-------

* Fix failing unittest on python-2.7
* Add iterutils module
* Update table of combining utf8 characters from python-2.7
* Speed up kitchen.text.misc.str_eq().
* docs:
  - api-i18n
  - api-exceptions
  - api-collections
  - api-iterutils
  - Add two tutorial sections for unicode
* unittests